# Plate_detection_python

src/: CMakeLists.txt  package.xml
src/launch/: plate_detection.launch  plate_four.launch
src/scripts/: .plate_detection.py.swp  plate_detection.py  video.py
